Add HTML file Ulmas name

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                 </form>
             </div>
         </section>
+        <section class="dreams-section">
+            <div class="container">
+                <h1>Ulmasbek...</h1>
+            </div>
+        </section>
     </main>
 
 
