Change HTML file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="icon" href="./images/logo.svg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>Car rental </title>
 </head>
@@ -84,6 +85,12 @@
         <section class="dreams-section">
             <div class="container">
                 <h1>Ulmasbek...</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, consequatur!</p>
+                <ul>
+                    <li>Qashqadaryo</li>
+                    <li>Shaxrisabz</li>
+                    <li>G'elon qishlog'i</li>
+                </ul>
             </div>
         </section>
     </main>
